--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,16 +4,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #000;
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  width: 100%;
+  max-width: 1080px;
 }
 
 .footer {
@@ -25,6 +26,7 @@
   background-color: #000;
   color: #fff;
   padding: 20px 0px;
+  z-index: 1;
 }
 
 .footer img {
